--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.0.0",
+    "@react-native-firebase/database": "^15.0.0",
+    "@react-native-firebase/firestore": "^15.0.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.1.0",
-    "expo": "^45.0.1",
+    "expo": "^45.0.6",
+    "expo-ads-admob": "~13.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^8.10.1",
     "mysql": "^2.18.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-native": "0.68.1",
+    "react-native": "0.68.2",
     "react-native-crypto": "^2.2.0",
     "react-native-material-design": "^0.3.7",
     "react-native-safe-area-context": "4.2.4",
