--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.1.0",
+    "body-parser": "^1.20.0",
     "expo": "^45.0.1",
     "expo-status-bar": "~1.3.0",
+    "express": "^4.18.1",
     "firebase": "^8.10.1",
     "mysql": "^2.18.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-native": "0.68.1",
+    "react-native": "0.68.2",
     "react-native-crypto": "^2.2.0",
-    "react-native-material-design": "^0.3.7",
+    "react-native-material-design": "^0.3.5",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
